@@ -1,3 +1,14 @@
+2019-11-29  Zalan Bujtas  <zalan@apple.com>
+
+        [LFC][IFC] Add support for hyphenate-limit-before and hyphenate-limit-after
+        https://bugs.webkit.org/show_bug.cgi?id=204710
+        <rdar://problem/57535210>
+
+        Reviewed by Antti Koivisto.
+
+        * layout/inlineformatting/InlineLineBreaker.cpp:
+        (WebCore::Layout::LineBreaker::tryBreakingTextRun const):
+
 2019-11-29  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, rolling out r252944.
